syntax = "proto3";

package hol;


message TPackageId {
    string identifier = 1;
}

message TPackage {
    TPackageId id = 1;
    string name = 2;
}

message TCommandId {
    string name = 1;
}

message TCommand {
    TCommandId id = 1;
}

message TResource {
    uint64 id = 1;
}

message TBlobResource {
    uint64 id = 1;
}

// requests and responses

message TInvokeCommandRequest {
    TPackageId pkg_id = 1;
    TCommandId command_id = 2;
    bytes arguments = 3;
}

message TInvokeCommandResponse {
    bool success = 1;
    bytes returns = 2;
    optional string error_message = 3;
}

